--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 include:
-  - documentation/quickguide/_getting_started.md
+  - /documentation/quickguide/_getting_started.md
+  - /documentation
+  - /clinical
 
 ignore_theme_config: true
