--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ include:
   - /documentation/quickguide/_getting_started.md
   - /documentation
   - /clinical
+  - _getting_started.md
 
 ignore_theme_config: true
