attempt with keep_files

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,1 @@
-include:
-  [
-    "documentation",
-    "documentation/quickguide/_getting_started.md",
-    "documentation/quickguide",
-  ]
+keep_files: [".md"]
